--- a/03/Vagrantfile
+++ b/03/Vagrantfile
@@ -62,7 +62,7 @@ Vagrant.configure("2") do |config|
         mkdir -p ~root/.ssh
         cp ~vagrant/.ssh/auth* ~root/.ssh
         apt-get update
-        apt-get install -y mdadm smartmontools hdparm gdisk tree
+        apt-get install -y tree
       SHELL
     end
 
