--- a/35/provisioning/master-named.conf
+++ b/35/provisioning/master-named.conf
@@ -80,3 +80,10 @@ zone "ddns.lab" {
     allow-update { key "zonetransfer.key"; };
     file "/etc/named/named.ddns.lab";
 };
+
+zone "newdns.lab" {
+    type master;
+    allow-transfer { key "zonetransfer.key"; };
+    allow-update { key "zonetransfer.key"; };
+    file "/etc/named/named.newdns.lab";
+};
