--- a/35/provisioning/slave-named.conf
+++ b/35/provisioning/slave-named.conf
@@ -79,3 +79,9 @@ zone "ddns.lab" {
     masters { 192.168.50.10; };
     file "/etc/named/named.ddns.lab";
 };
+
+zone "newdns.lab" {
+    type slave;
+    masters { 192.168.50.10; };
+    file "/etc/named/named.newdns.lab";
+};
