--- a/35/provisioning/playbook.yml
+++ b/35/provisioning/playbook.yml
@@ -22,6 +22,7 @@
     copy: src={{ item }} dest=/etc/named/ owner=root group=named mode=0660
     with_fileglob:
       - named.d*
+      - named.newdns.lab
   - name: copy resolv.conf to the servers
     template:
       src: servers-resolv.conf.j2
