--- a/35/Vagrantfile
+++ b/35/Vagrantfile
@@ -5,8 +5,9 @@ Vagrant.configure(2) do |config|
   config.vm.box = "centos/7"
 
   config.vm.provision "ansible" do |ansible|
-    ansible.verbose = "vvv"
-    ansible.playbook = "provisioning/playbook.yml"
+    # ansible.verbose = "vvv"
+    # ansible.playbook = "provisioning/playbook.yml"
+    ansible.playbook = "provisioning2/playbook.yml"
     ansible.become = "true"
   end
 
