--- a/43/Vagrantfile
+++ b/43/Vagrantfile
@@ -18,25 +18,34 @@ Vagrant.configure("2") do |config|
 
   MACHINES.each do |boxname, boxconfig|
 
-      config.vm.define boxname do |box|
+    config.vm.define boxname do |box|
 
-          box.vm.box = boxconfig[:box_name]
-          box.vm.host_name = boxname.to_s
+      box.vm.box = boxconfig[:box_name]
+      box.vm.host_name = boxname.to_s
 
-          box.vm.network "private_network", ip: boxconfig[:ip_addr]
+      box.vm.network "private_network", ip: boxconfig[:ip_addr]
 
-          box.vm.provider :virtualbox do |vb|
-            vb.customize ["modifyvm", :id, "--memory", "1024"]
-          end
-
-          box.vm.provision :shell do |s|
-             s.inline = 'mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh'
-          end
-
-          box.vm.provision :ansible do |ansible|
-            ansible.playbook = "ansible/#{boxname}.yaml"
-            ansible.inventory_path = "ansible/hosts"
-          end
+      box.vm.provider :virtualbox do |vb|
+        vb.customize ["modifyvm", :id, "--memory", "1024"]
       end
+
+      box.vm.provision :shell do |s|
+         s.inline = 'mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh'
+      end
+
+      # box.vm.provision :ansible do |ansible|
+      #   ansible.playbook = "ansible/#{boxname}.yaml"
+      #   ansible.inventory_path = "ansible/hosts"
+      # end
+
+
+      if boxname.to_s == 'slave'
+        box.vm.provision "ansible" do |ansible|
+          ansible.playbook = "ansible/provision.yaml"
+          ansible.inventory_path = "ansible/hosts"
+          ansible.host_key_checking = "false"
+        end
+      end
+    end
   end
 end
