--- a/43/ansible/templates/conf.d/05-binlog.cnf
+++ b/43/ansible/templates/conf.d/05-binlog.cnf
@@ -9,6 +9,7 @@ log-slave-updates = On
 gtid-mode = On
 enforce-gtid-consistency = On
 
-# Эта часть только для слэйва - исключаем репликацию таблиц
-#replicate-ignore-table=bet.events_on_demand
-#replicate-ignore-table=bet.v_same_event
+{% if inventory_hostname == 'slave' %}
+replicate-ignore-table=bet.events_on_demand
+replicate-ignore-table=bet.v_same_event
+{% endif %}
