--- a/44/ansible/provision.yml
+++ b/44/ansible/provision.yml
@@ -21,3 +21,30 @@
     - name: disable SElinux
       selinux:
         state: disabled
+
+    - name: Add Postgres 14 repo
+      shell: |
+        dnf install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm
+      when: inventory_hostname in groups["postgres"]
+
+    - name: Disable built-in PostgreSQL module
+      shell: |
+        dnf -qy module disable postgresql
+
+    - name: Install postgres
+      ansible.builtin.yum:
+        name:
+          - postgresql14-server
+        state: present
+      when: inventory_hostname in groups["postgres"]
+
+    - name: Init database
+      shell: /usr/pgsql-14/bin/postgresql-14-setup initdb
+      when: inventory_hostname in groups["postgres"]
+
+    - name: Start postgres service
+      ansible.builtin.service:
+        name: postgresql-14
+        state: started
+        enabled: true
+      when: inventory_hostname in groups["postgres"]
