--- a/44/ansible/provision.yml
+++ b/44/ansible/provision.yml
@@ -1,5 +1,5 @@
 ---
-- name: Set up edge server
+- name: Postgres
   hosts: all
   become: true
   gather_facts: false
@@ -8,7 +8,7 @@
     - name: Install python3
       ansible.builtin.raw: yum install -y python3 python3-pip
       changed_when: true
-      when: inventory_hostname == 'node1'
+      when: inventory_hostname in groups["postgres"]
 
     - name: Gather facts
       ansible.builtin.setup:
@@ -17,7 +17,8 @@
       ansible.builtin.pip:
         name:
           - psycopg2==2.7.7
-      when: inventory_hostname == 'node1'
+          - pexpect
+      when: inventory_hostname in groups["postgres"]
 
     - name: Install softs on CentOS
       ansible.builtin.yum:
@@ -29,23 +30,24 @@
         update_cache: true
 
     - name: disable firewalld
-      service:
+      ansible.builtin.service:
         name: firewalld
         state: stopped
         enabled: false
 
     - name: disable SElinux
-      selinux:
+      ansible.builtin.selinux:
         state: disabled
 
     - name: Add Postgres 14 repo
-      shell: |
+      ansible.builtin.shell: |
         dnf install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm
       when: inventory_hostname in groups["postgres"]
 
     - name: Disable built-in PostgreSQL module
-      shell: |
+      ansible.builtin.shell: |
         dnf -qy module disable postgresql
+      when: inventory_hostname in groups["postgres"]
 
     - name: Install postgres
       ansible.builtin.yum:
@@ -55,7 +57,7 @@
       when: inventory_hostname in groups["postgres"]
 
     - name: Init database
-      shell: /usr/pgsql-14/bin/postgresql-14-setup initdb
+      ansible.builtin.shell: /usr/pgsql-14/bin/postgresql-14-setup initdb
       when: inventory_hostname in groups["postgres"]
 
     - name: Start postgres service
@@ -81,30 +83,50 @@
       when: inventory_hostname == 'node1'
 
     - name: Fix connection params
-      community.postgresql.postgresql_pg_hba:
-        dest: /var/lib/pgsql/14/data/pg_hba.conf
-        overwrite: true
-        contype: host
-        users: replication
-        databases: replication
-        method: scram-sha-256
-        source: "{{ item }}"
-      with_items:
-        - 192.168.57.11/32
-        - 192.168.57.12/32 
-      when: inventory_hostname == 'node1'
-
-    - name: Fix connection params
       ansible.builtin.blockinfile:
         path: /var/lib/pgsql/14/data/pg_hba.conf
         backup: true
         block: |
-          host    replication replication    192.168.57.11/32        scram-sha-256
-          host    replication replication    192.168.57.12/32        scram-sha-256
+          local   all             all                                     trust
+          host    replication replicator    192.168.57.11/32        scram-sha-256
+          host    replication replicator    192.168.57.12/32        scram-sha-256
       when: inventory_hostname == 'node1'
 
-    - name: Restart postgres
+    - name: Restart postgres on node1
       ansible.builtin.service:
         name: postgresql-14
         state: restarted
       when: inventory_hostname == 'node1'
+    
+    - name: Stop postgres on node2
+      ansible.builtin.service:
+        name: postgresql-14
+        state: stopped
+      when: inventory_hostname == 'node2'
+
+    - name: Remove old data on node2
+      ansible.builtin.file:
+        path: /var/lib/pgsql/14/data
+        state: absent
+      when: inventory_hostname == 'node2'
+
+    - name: Request basebackup
+      become_user: postgres
+      expect:
+        command: 'pg_basebackup -h 192.168.57.11 -U  replicator -p 5432 -D /var/lib/pgsql/14/data/ -R -P'
+        responses: 
+          '.*Password*': "Otus2022!"
+      when: inventory_hostname == 'node2'
+
+    - name: Replace listen IP
+      ansible.builtin.lineinfile:
+        path: /var/lib/pgsql/14/data/postgresql.conf
+        regexp: "^listen_addresses"
+        line: "listen_addresses =  'localhost, 192.168.57.12'"
+      when: inventory_hostname == 'node2'
+
+    - name: Restart postgres on node2
+      ansible.builtin.service:
+        name: postgresql-14
+        state: restarted
+      when: inventory_hostname == 'node2'
