dev: barman backup

--- a/44/ansible/provision.yml
+++ b/44/ansible/provision.yml
@@ -20,3 +20,8 @@
      - postgres-install
      - postgres-replication
 
+- name: Set up backup
+  hosts: all
+  become: true
+  roles:
+   - barman-install
