--- a/project/ansible/roles/common-config/tasks/main.yaml
+++ b/project/ansible/roles/common-config/tasks/main.yaml
@@ -8,9 +8,9 @@
     state: present
     update_cache: true
 
-- name: Install docker
-  ansible.builtin.import_role:
-    name: geerlingguy.docker
-  vars:
-    docker_users:
-      - vagrant
+# - name: Install docker
+#   ansible.builtin.import_role:
+#     name: geerlingguy.docker
+#   vars:
+#     docker_users:
+#       - vagrant
