--- a/project/Vagrantfile
+++ b/project/Vagrantfile
@@ -15,10 +15,9 @@ Vagrant.configure("2") do |config|
     box.vm.box_version = BOX_VERSION
     box.vm.host_name = "fw1"
     box.vm.network "private_network",
-      ip: '10.10.1.1', adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
+      ip: "192.168.1.10", adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
     box.vm.network "private_network",
-      ip: '192.168.56.10', adapter: 8
-
+      ip: "192.168.56.10", adapter: 8
     box.vm.provision "ansible" do |ansible|
       ansible.playbook = "ansible/fw1.yaml"
     end
@@ -34,11 +33,49 @@ Vagrant.configure("2") do |config|
     box.vm.box_version = BOX_VERSION
     box.vm.host_name = "blnc"
     box.vm.network "private_network",
-      ip: '10.10.1.21', adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
+      ip: "192.168.1.21", adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
     box.vm.network "private_network",
-      ip: '192.168.56.21', adapter: 8
+      ip: "192.168.56.21", adapter: 8
     box.vm.provision "ansible" do |ansible|
       ansible.playbook = "ansible/blnc.yaml"
     end
   end
+
+  # --- app 1
+  config.vm.define :app1 do |box|
+    box.vm.provider "virtualbox" do |v|
+      v.memory = 1024
+      v.cpus = 1
+    end
+    box.vm.box = BOX_NAME
+    box.vm.box_version = BOX_VERSION
+    box.vm.host_name = "app1"
+    box.vm.network "private_network",
+      ip: "192.168.1.31", adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
+    box.vm.network "private_network",
+      ip: "192.168.56.31", adapter: 8
+    box.vm.provision "ansible" do |ansible|
+      ansible.playbook = "ansible/app.yaml"
+    end
+  end
+
+  # # --- firewall 2
+  # config.vm.define :fw2 do |box|
+  #   box.vm.provider "virtualbox" do |v|
+  #     v.memory = 1024
+  #     v.cpus = 1
+  #   end
+  #   box.vm.box = BOX_NAME
+  #   box.vm.box_version = BOX_VERSION
+  #   box.vm.host_name = "fw2"
+  #   box.vm.network "private_network",
+  #     ip: "192.168.1.101", adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "dmz-net"
+  #   box.vm.network "private_network",
+  #     ip: "10.10.1.101", adapter: 3, netmask: "255.255.255.0", virtualbox__intnet: "internal"
+  #   box.vm.network "private_network",
+  #     ip: "192.168.56.101", adapter: 8
+  #   box.vm.provision "ansible" do |ansible|
+  #     ansible.playbook = "ansible/fw1.yaml"
+  #   end
+  # end
 end
