--- a/project/ansible/blnc.yaml
+++ b/project/ansible/blnc.yaml
@@ -4,14 +4,7 @@
   tasks:
     - name: Install common
       ansible.builtin.import_role:
-        name: common-config
-
-    - name: Install docker
-      ansible.builtin.import_role:
-        name: geerlingguy.docker
-      vars:
-        docker_users:
-          - vagrant
+        name: common-config-docker
 
     # --- does not work
     # - name: Move eth1 to dmz zone
@@ -31,15 +24,24 @@
     #   permanent: true
     #   state: enabled
 
-    - name: Run balancer container
-      community.docker.docker_container:
-        name: balancer
-        image: nginx:latest
-        state: started
-        ports:
-          - "80:80"
-
     - name: Reload firewalld
       ansible.builtin.service:
         name: firewalld
         state: reloaded
+
+    - name: Copy nginx config file
+      ansible.builtin.copy:
+        src: "nginx.conf"
+        dest: "/home/vagrant/nginx.conf"
+        owner: vagrant
+        group: vagrant
+
+    - name: Run balancer container
+      community.docker.docker_container:
+        name: balancer
+        image: nginx:latest
+        volumes:
+          - "/home/vagrant/nginx.conf:/etc/nginx/conf.d/default.conf"
+        state: started
+        ports:
+          - "80:80"
