--- a/project/ansible/app.yaml
+++ b/project/ansible/app.yaml
@@ -11,6 +11,8 @@
       ansible.builtin.import_role:
         name: common-config-docker
 
+    # --- Firewall config
+
     - name: Move eth1 to dmz zone
       ansible.builtin.shell: "firewall-cmd --zone=dmz --change-interface=eth1 --permanent"
 
@@ -18,6 +20,22 @@
       ansible.builtin.service:
         name: firewalld
         state: reloaded
+
+    # --- Static routes to internal network
+
+    - name: Add static route
+      ansible.builtin.blockinfile:
+        path: /etc/sysconfig/network-scripts/route-eth1
+        create: true
+        block: |
+          10.10.1.0/24 via 192.168.1.101
+
+    - name: Restart network service
+      ansible.builtin.systemd:
+        name: NetworkManager
+        state: restarted
+
+    # --- Run application
 
     - name: Create project directory
       ansible.builtin.file:
@@ -41,12 +59,12 @@
         owner: vagrant
         group: vagrant
 
-    - name: Start database service
-      community.docker.docker_compose:
-        project_src: "{{ project_dir }}"
-        state: present
-        services:
-          - database_default
+    # - name: Start database service
+    #   community.docker.docker_compose:
+    #     project_src: "{{ project_dir }}"
+    #     state: present
+    #     services:
+    #       - database_default
 
     - name: Migrate database
       ansible.builtin.shell:
