--- a/project/ansible/blnc.yaml
+++ b/project/ansible/blnc.yaml
@@ -6,11 +6,13 @@
       ansible.builtin.import_role:
         name: common-config-docker
 
-    # --- does not work
-    # - name: Move eth1 to dmz zone
+    - name: Move eth2 to external zone
+      ansible.builtin.shell: "firewall-cmd --zone=external --change-interface=eth2 --permanent"
+
+    # - name: Enable http service for external zone
     #   ansible.posix.firewalld:
-    #     zone: dmz
-    #     interface: eth1
+    #     zone: external
+    #     service: http
     #     permanent: true
     #     state: enabled
 
@@ -43,5 +45,6 @@
         volumes:
           - "/home/vagrant/nginx.conf:/etc/nginx/conf.d/default.conf"
         state: started
+        restart: true
         ports:
           - "80:80"
