--- a/project/ansible/provision.yaml
+++ b/project/ansible/provision.yaml
@@ -1,6 +1,5 @@
 ---
-- import_playbook: "db1.yaml"
-- import_playbook: "db2.yaml"
+- import_playbook: "database.yaml"
 - import_playbook: "fw.yaml"
 - import_playbook: "app.yaml"
 - import_playbook: "blnc.yaml"
