--- a/project/ansible/provision.yaml
+++ b/project/ansible/provision.yaml
@@ -2,4 +2,5 @@
 - import_playbook: "database.yaml"
 - import_playbook: "fw.yaml"
 - import_playbook: "app.yaml"
+- import_playbook: "barman.yaml"
 - import_playbook: "blnc.yaml"
